--- a/form registro.html
+++ b/form registro.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     
 </head>
-<body style="background-color: green;">
+<body>
     <h2>Formulario de Registro</h2>
     <form action="link" method="post" target="_blank">
 
