--- a/formRegistro.html
+++ b/formRegistro.html
@@ -12,6 +12,8 @@
         <a href="index.html"><img src="/images/paquete.png" alt="Icono"></a>        
         <h1>Ye-LLe</h1>
     </div>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <nav>
         <a href="/index.html">Inicio</a>
         <a href="/formEncomienda.html">Envia tus packetes</a>
