--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="nav">
     <div class="title">
         <a href="index.html"><img src="/images/paquete.png" alt="Icono"></a>  
-        <h1>Ye-LLe</h1>
+        <h1 class="titleWord">Ye-LLe</h1>
     </div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -33,6 +33,36 @@
     </div>
     <div class="section-img">
         <img src="/images/repartidor.jpg" alt="Imagen de repartidor">
+    </div>
+</section>
+
+<section class="features">
+    <div class="feature">
+        <img src="/images/tracking.png" alt="Tracking">
+        <h2>Tracking</h2>
+        <p>En tiempo real rastreamos tus paquetes, desde el retiro hasta la entrega.</p>
+    </div>
+    <div class="feature">
+        <img src="/images/insurance.png" alt="Insurance">
+        <h2>Insurance</h2>
+        <p>Protege tus envios con comodas opciones de seguros adicionales.</p>
+    </div>
+    <div class="feature">
+        <img src="images/options.png" alt="Options">
+        <h2>Multiple Shipping Options</h2>
+        <p>Selecciona sobre una gran variedad de tipos de envios que se adapten a tus necesidades.</p>
+    </div>
+</section>
+<section class="testimonials">
+    <div class="testimonial">
+        <img src="/images/testimonial.png" alt="Avatar">
+        <p>"Llevo años utilizando esta paquetería y nunca he tenido ningún problema. Su servicio es rápido, fiable y asequible."</p>
+        <h3>Mario Castañeda</h3>
+    </div>
+    <div class="testimonial">
+        <img src="/images/testimonial.png" alt="Avatar">
+        <p>"Me impresionó lo fácil que era enviar un paquete con esta paquetería. El proceso fue sencillo y el precio muy razonable".</p>
+        <h3>Julia Ramirez</h3>
     </div>
 </section>
 <footer class="footer">
