--- a/formRegistro.html
+++ b/formRegistro.html
@@ -92,11 +92,29 @@
 
     </form>
     <footer class="footer">
-        <a href="/about.html">Confia en Nosotros</a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path></svg></a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
-        <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <p>&copy; 2024 Proyecto Codo a Codo - Equipo 10. All rights reserved.</p>
+              </div>
+              <div class="col-md-6 text-md-right">
+                <ul class="list-inline">
+                  <li class="list-inline-item">
+                    <a href="https://www.facebook.com" target="_blank"><img src="/images/facebook.png" alt="Facebook"></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://twitter.com" target="_blank"><img src="/images/twitter.png" alt="Twitter"></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://www.instagram.com" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://web.whatsapp.com/" target="_blank"><img src="/images/whatsapp.png" alt="whatsapp web"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
     </footer>
     </body>
 </html>
