--- a/index.html
+++ b/index.html
@@ -53,6 +53,50 @@
         <p>Selecciona sobre una gran variedad de tipos de envios que se adapten a tus necesidades.</p>
     </div>
 </section>
+
+<section class="costs-container">
+        <div class="card" style="background-image: url('/images/auto.jpg');">
+          <div class="card-content">
+            <i class="fas fa-car"></i>
+            <h2>Auto</h2>
+            <p>$1000 - $2000</p>
+            <p>Ideal para paquetes de tamaño medio y entrega rápida.</p>
+          </div>
+        </div>
+        <div class="card" style="background-image: url('/images/moto.jpg');">
+          <div class="card-content">
+            <i class="fas fa-motorcycle"></i>
+            <h2>Moto</h2>
+            <p>$500 - $1000</p>
+            <p>Ideal para paquetes pequeños/medianos y entregas rápidas.</p>
+          </div>
+        </div>
+        <div class="card" style="background-image: url('/images/combi.jpg');">
+          <div class="card-content">
+            <i class="fas fa-bus"></i>
+            <h2>Combi</h2>
+            <p>$2000 - $3000</p>
+            <p>Ideal para paquetes medianos/grandes y entregas en zonas remotas.</p>
+          </div>
+        </div>
+        <div class="card" style="background-image: url('/images/Camion.jpg');">
+          <div class="card-content">
+            <i class="fas fa-truck"></i>
+            <h2>Camión</h2>
+            <p>$3000 - $5000</p>
+            <p>Ideal para paquetes muy grandes y entregas en zonas remotas.</p>
+          </div>
+        </div>
+        <div class="card" style="background-image: url('/images/avion.jpg');">
+          <div class="card-content">
+            <i class="fas fa-plane"></i>
+            <h2>Avión</h2>
+            <p>$5000 - $10000</p>
+            <p>Ideal para entregas urgentes y envíos internacionales.</p>
+          </div>
+        </div>
+</section>      
+  
 <section class="testimonials">
     <div class="testimonial">
         <img src="/images/testimonial.png" alt="Avatar">
@@ -66,11 +110,29 @@
     </div>
 </section>
 <footer class="footer">
-    <a href="/about.html">Confia en Nosotros</a>
-    <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
-    <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path></svg></a>
-    <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
-    <a href="#"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path></svg></a>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <p>&copy; 2024 Proyecto Codo a Codo - Equipo 10. All rights reserved.</p>
+          </div>
+          <div class="col-md-6 text-md-right">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com" target="_blank"><img src="/images/facebook.png" alt="Facebook"></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com" target="_blank"><img src="/images/twitter.png" alt="Twitter"></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://web.whatsapp.com/" target="_blank"><img src="/images/whatsapp.png" alt="whatsapp web"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 </footer>
 </body>
 </html>
