--- a/formRegistro.html
+++ b/formRegistro.html
@@ -27,11 +27,11 @@
         <fieldset>
             <legend>Datos del Remitente</legend>
         <label for="name">Nombre</label>
-        <input type="text" id="name" name="name" placeholder="Ingrese su nombre aqui...">
+        <input type="text" id="name" name="name" placeholder="">
         <label for="name">Apellido</label>
-        <input type="text" name="name" id="name" placeholder="Ingrese su apellido aqui..."><br><br>
+        <input type="text" name="name" id="name" placeholder=""><br><br>
         <label for="number">DNI</label>
-        <input type="number" name="number" id="number" max="9" placeholder="Ingrese su DNI...">
+        <input type="number" name="number" id="number" max="9" placeholder="">
         <label for="sexo">Sexo</label>
         <select name="sexo">
             <option >Masculino</option>
@@ -41,29 +41,29 @@
         <label for="date">Fecha de Nacimiento</label>
         <input type="date"><br><br>
         <label for="name">Correo Electrónico</label>
-        <input type="text" id="name" name="name" size="50" placeholder="Ingrese su dirección de email aquí..."><br><br>
+        <input type="text" id="name" name="name" size="50" placeholder=""><br><br>
         <label for="name">Direccion</label>
-        <input type="text" id="name" name="name" size="50" placeholder="Ingrese su Direccion aquí..."><br><br>
+        <input type="text" id="name" name="name" size="50" placeholder=""><br><br>
         <label for="name">Codigo Postal</label>
-        <input type="text" id="name" name="name" size="10" placeholder="Ingrese su C.P. aquí...">
+        <input type="text" id="name" name="name" size="10" placeholder="">
         <label for="name">Ciudad</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Ciudad aquí..."><br><br>
+        <input type="text" id="name" name="name" size="30" placeholder=""><br><br>
         <label for="name">Provincia</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Provincia aquí...">
+        <input type="text" id="name" name="name" size="30" placeholder="">
         <label for="name">Pais</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Pais aquí..."><br><br>
+        <input type="text" id="name" name="name" size="30" placeholder=""><br><br>
         <label for="name">Contacto</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Contacto">
+        <input type="text" id="name" name="name" size="30" placeholder="">
         </fieldset><br><br>
 
         <fieldset>
         <legend>Datos del Destinatario</legend>
         <label for="name">Nombre</label>
-        <input type="text" id="name" name="name" placeholder="Ingrese su nombre aqui...">
+        <input type="text" id="name" name="name" placeholder="">
         <label for="name">Apellido</label>
-        <input type="text" name="name" id="name" placeholder="Ingrese su apellido aqui..."><br><br>
+        <input type="text" name="name" id="name" placeholder=""><br><br>
         <label for="number">DNI</label>
-        <input type="number" name="number" id="number" max="9" placeholder="Ingrese su DNI...">
+        <input type="number" name="number" id="number" max="9" placeholder="">
         <label for="sexo">Sexo</label>
         <select name="sexo">
             <option >Masculino</option>
@@ -73,19 +73,19 @@
         <label for="date">Fecha de Nacimiento</label>
         <input type="date"><br><br>
         <label for="name">Correo Electrónico</label>
-        <input type="text" id="name" name="name" size="50" placeholder="Ingrese su dirección de email aquí..."><br><br>
+        <input type="text" id="name" name="name" size="50" placeholder=""><br><br>
         <label for="name">Direccion</label>
-        <input type="text" id="name" name="name" size="50" placeholder="Ingrese su Direccion aquí..."><br><br>
+        <input type="text" id="name" name="name" size="50" placeholder=""><br><br>
         <label for="name">Codigo Postal</label>
-        <input type="text" id="name" name="name" size="10" placeholder="Ingrese su C.P. aquí...">
+        <input type="text" id="name" name="name" size="10" placeholder="">
         <label for="name">Ciudad</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Ciudad aquí..."><br><br>
+        <input type="text" id="name" name="name" size="30" placeholder=""><br><br>
         <label for="name">Provincia</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Provincia aquí...">
+        <input type="text" id="name" name="name" size="30" placeholder="">
         <label for="name">Pais</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Pais aquí..."><br><br>
+        <input type="text" id="name" name="name" size="30" placeholder=""><br><br>
         <label for="name">Contacto</label>
-        <input type="text" id="name" name="name" size="30" placeholder="Ingrese su Contacto">
+        <input type="text" id="name" name="name" size="30" placeholder="">
         </fieldset>
         
         <input type="submit" value="ENVIAR">
