--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <header class="text-gray-600 body-font nav">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+          <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="index.html">
             <img src="/images/paquete.png" alt="Icono" class="w-20 h-20 text-white p-2 rounded-full">
             <span class="ml-3 text-xl">ye-LLe</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a class="mr-5 hover:text-gray-900">Inicio</a>
-            <a class="mr-5 hover:text-gray-900">Envia tus packetes</a>
-            <a class="mr-5 hover:text-gray-900">Quienes somos</a>
+            <a class="mr-5 hover:text-gray-900" href="form registro.html">Envia tus packetes</a>
+            <a class="mr-5 hover:text-gray-900" href="form encomienda.html">Quienes somos</a>
             <a class="mr-5 hover:text-gray-900">Contactanos</a>
           </nav>
         </div>
