--- a/about.html
+++ b/about.html
@@ -21,8 +21,25 @@
         <a href="/formRegistro.html">Contactanos</a>
     </nav>
 </header>
-<section>
-    <h2>crear aca la seccion acerca de nosotros</h2>
+<section class="section">
+  <div class="section-text">
+    <h1>
+          Ni Yendo ni llegando, ya estamos con vos
+    </h1>
+    <h3>
+      Somos una empresa dedicada al envío seguro y rápido de paquetes, comprometida con brindar un servicio de calidad a nuestros clientes. Con años de experiencia en el mercado, nos destacamos por nuestra eficiencia, confiabilidad y atención personalizada. Nuestro equipo altamente capacitado está listo para satisfacer todas tus necesidades de envío, garantizando la entrega puntual y segura de tus paquetes a cualquier destino. ¡Confía en nosotros para hacer llegar tus envíos de manera rápida y confiable!"
+    </h3>
+  </div>
+  <div class="section-img">
+    <br><br><br>
+    <h3>Casa Central calle 20 N° 650 Colón (Bs. As.)</h3>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3311.8922830608276!2d-61.10210592376772!3d-33.89242792028402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b810574866b079%3A0xb7122f91579ed1ba!2sC.%2020%20650%2C%20Col%C3%B3n%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1712757202156!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <div>
+    <h4>Sucursales</h4>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.4674871839975!2d-58.454747223738394!3d-34.59233845689837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb55606073a53%3A0xeec593b9579d47f1!2sretiro%20terminal!5e0!3m2!1ses-419!2sar!4v1712758142615!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3311.0614295242112!2d-60.58916212376698!3d-33.913818521392905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b84aca157b1793%3A0xf1f2b880e932d996!2sTerminal%20De%20%C3%93mnibus%20Pergamino!5e0!3m2!1ses-419!2sar!4v1712758206442!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 </section>
 <footer class="footer">
     <div class="container">
