--- a/formRegistro.html
+++ b/formRegistro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envia tus Packetes a cualquier destino</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/images/ico-paquete.ico">   
 </head>
 <body>
   <header class="nav">
