--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Envia tus Packetes a cualquier destino</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/images/ico-paquete.ico">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="nav">
