Se finalizo seccion CONTACTO, ver barra nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/index.html">Inicio</a>
         <a href="/formEncomienda.html">Envia tus packetes</a>
         <a href="/about.html">Quienes somos</a>
-        <a href="/formRegistro.html">Contactanos</a>
+        <a href="/contacto.html">Contactanos</a>
     </nav>
 </header>
 <section class="section">
