update css in about us, added compress to images to webp

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
 </section>
 
   <section class="sucursales">
+    <h3>Nuestras Sucusarles</h3>
     <div class="card-container">
       <div class="card">
         <h2>Casa Central calle 20 N° 650 Colón (Bs. As.)</h2>
