--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="section-img">
-        <img src="/images/repartidor.jpg" alt="Imagen de repartidor">
+        <img src="/images/repartidor.webp" alt="Imagen de repartidor">
     </div>
 </section>
 
@@ -59,7 +59,7 @@
 </section>
 
 <section class="costs-container">
-        <div class="card" style="background-image: url('/images/auto.jpg');">
+        <div class="card" style="background-image: url('/images/auto.webp');">
           <div class="card-content">
             <i class="fas fa-car"></i>
             <h2>Auto</h2>
@@ -67,7 +67,7 @@
             <p>Ideal para paquetes de tamaño medio y entrega rápida.</p>
           </div>
         </div>
-        <div class="card" style="background-image: url('/images/moto.jpg');">
+        <div class="card" style="background-image: url('/images/moto.webp');">
           <div class="card-content">
             <i class="fas fa-motorcycle"></i>
             <h2>Moto</h2>
@@ -75,7 +75,7 @@
             <p>Ideal para paquetes pequeños/medianos y entregas rápidas.</p>
           </div>
         </div>
-        <div class="card" style="background-image: url('/images/combi.jpg');">
+        <div class="card" style="background-image: url('/images/combi.webp');">
           <div class="card-content">
             <i class="fas fa-bus"></i>
             <h2>Combi</h2>
@@ -83,7 +83,7 @@
             <p>Ideal para paquetes medianos/grandes y entregas en zonas remotas.</p>
           </div>
         </div>
-        <div class="card" style="background-image: url('/images/Camion.jpg');">
+        <div class="card" style="background-image: url('/images/Camion.webp');">
           <div class="card-content">
             <i class="fas fa-truck"></i>
             <h2>Camión</h2>
@@ -91,7 +91,7 @@
             <p>Ideal para paquetes muy grandes y entregas en zonas remotas.</p>
           </div>
         </div>
-        <div class="card" style="background-image: url('/images/avion.jpg');">
+        <div class="card" style="background-image: url('/images/avion.webp');">
           <div class="card-content">
             <i class="fas fa-plane"></i>
             <h2>Avión</h2>
