update icon in nav

--- a/contacto.html
+++ b/contacto.html
@@ -11,8 +11,7 @@
 
   <header class="nav">
     <div class="title">
-        <a href="index.html"><img src="/images/paquete.png" alt="Icono"></a>        
-        <h1>Ye-LLe</h1>
+      <a href="index.html"><img src="/images/YelleNav.png" alt="Icono" /></a>
     </div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -28,7 +27,7 @@
 
 <section class="contact">
   <div class="contactate">
-      <h2>CONTACTATE</h2>
+      <h2>CONTACTANOS</h2>
   </div>
 </section>  
 
