--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <body>
     <header class="nav">
       <div class="title">
-        <a href="index.html"><img src="/images/paquete.png" alt="Icono" /></a>
-        <h1 class="titleWord">Ye-LLe</h1>
+        <a href="index.html"><img src="/images/YelleNav.png" alt="Icono" /></a>
       </div>
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -32,7 +31,7 @@
     <section class="section">
       <div class="section-text">
         <h1>
-          Con Ye-LLe...<br />
+          Con YeLLe...<br />
           Ni Yendo ni llegando, ya estamos con vos
         </h1>
         <p>
