--- a/formRegistro.html
+++ b/formRegistro.html
@@ -10,8 +10,7 @@
 <body>
   <header class="nav">
     <div class="title">
-        <a href="index.html"><img src="/images/paquete.png" alt="Icono"></a>        
-        <h1>Ye-LLe</h1>
+      <a href="index.html"><img src="/images/YelleNav.png" alt="Icono" /></a>
     </div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
