--- a/formEncomienda.html
+++ b/formEncomienda.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Envia tus Packetes a cualquier destino</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/images/ico-paquete.ico">   
-</head>
-<body>
-  <header class="nav">
-    <div class="title">
-      <a href="index.html"><img src="/images/YelleNav.png" alt="Icono" /></a>
-    </div>
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="menu-icon">&#9776;</label>
-    <nav>
+    <link rel="stylesheet" href="/css/formEncomienda.css" />
+    <link rel="shortcut icon" href="/images/ico-paquete.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta property="og:title" content="Ye-LLe Envios" />
+    <meta property="og:type" content="Web de envios a todo el Mundo" />
+    <meta property="og:description" content="Envia tus paquetes a donde lo necesites, rapido y seguro."/>
+    <meta property="og:image" content="https://enviosyelle.netlify.app/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+  </head>
+  <body>
+    <header class="nav">
+      <div class="title">
+        <a href="index.html"><img src="/images/YelleNav.png" alt="Icono" /></a>
+      </div>
+      <input type="checkbox" id="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <nav>
         <a href="/index.html">Inicio</a>
         <a href="/formEncomienda.html">Envia tus packetes</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
-    </nav>
-</header>
+      </nav>
+    </header>
     <h2>Datos de Envio</h2>
     <form action="link" method="post" target="_blank">
 
