--- a/formEncomienda.html
+++ b/formEncomienda.html
@@ -30,7 +30,7 @@
     </header>
     <h2>Datos de Envio</h2>
     <form action="link" method="post" target="_blank">
-
+<!-- comentario -->
         <fieldset>
             <legend>Encomienda</legend>
         <label for="ENVIAR">Como queres enviar</label>
