--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       </div>
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
-      <nav>
+      <nav class="barNav">
         <a href="/index.html">Inicio</a>
-        <a href="/formEncomienda.html">Envia tus packetes</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
+        <a href="/login.html">Iniciar sesión</a>   
       </nav>
     </header>
     <section class="section">
@@ -171,5 +171,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/registroLogin.js"></script>
   </body>
 </html>
