--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <nav>
         <a href="/index.html">Inicio</a>
-        <a href="/formEncomienda.html">Envia tus packetes</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
+        <a href="/loginRegistro.html">Registrarse/Loguearse</a>
     </nav>
 </header>
 <section class="sectionAbout">
