change names,still missing media querys

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="/index.html">Inicio</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
-        <a href="/loginRegistro.html">Registrarse/Loguearse</a>
+        <a href="/loginRegistro.html">Iniciar sesión</a>
     </nav>
 </header>
 <section class="sectionAbout">
