update media querys

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
         <a href="/index.html">Inicio</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
-        <a href="/loginRegistro.html">Iniciar sesión</a>
+        <a href="/login.html">Iniciar sesión</a>
     </nav>
 </header>
 
