update route 'envios'

--- a/formEncomienda.html
+++ b/formEncomienda.html
@@ -26,7 +26,7 @@
         <a href="/index.html">Inicio</a>
         <a href="/about.html">Quienes somos</a>
         <a href="/contacto.html">Contactanos</a>
-        <a href="/loginRegistro.html">Registrarse/Loguearse</a>
+        <a href="/login.html">Iniciar sessión</a>
       </nav>
     </header>
     <h2>Datos de Envio</h2>
