--- a/index.html
+++ b/index.html
@@ -178,24 +178,9 @@
       </div>
     </footer>
     <script src="./js/registroLogin.js"></script>
+    <script src="./js/apiDolar.js"></script>
     <script>
-      /*----------- funcion para acceder a la API -----------------*/
-      function convertir_dolar(dolar_hoy, pesos, precio_dolar) {
-        fetch("https://dolarapi.com/v1/dolares/cripto")
-          .then(response => response.json())
-          .then(data => {
-            console.log(data);    
-            let dolar = data['venta'];
-            let precio = pesos / dolar;
-            precio = precio.toFixed(2);
-            dolar = dolar.toFixed(2);
-            var v_hoy = document.getElementById(dolar_hoy);
-            v_hoy.innerHTML = dolar;
-            var v_pre = document.getElementById(precio_dolar);
-            v_pre.innerHTML = precio;});
-          };
-    
-      /*----- se llama a la funcion con $2000 y los ID de span "dolar_hoy" y "precio dolar" -----------------*/
+      /*----- se llama a la funcion con $5000 y los ID de span "dolar_hoy" y "precio dolar" -----------------*/
       convertir_dolar("dolar_hoy", 5000, "precio_dolar");
     </script>
   </body>
