update validations on forms

--- a/registro.html
+++ b/registro.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Envia tus paquetes a donde lo necesites, rapido y seguro."/>
   <meta property="og:image" content="https://enviosyelle.netlify.app/" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <title>Registrarse</title>
 </head>
@@ -49,7 +50,7 @@
       <label for="password">Contraseña</label>
       <input type="password" id="password" name="password" required>
 
-      <button type="submit" class="btn">Registrarse</button>
+      <button type="submit" class="btn" id="submit">Registrarse</button>
     </form>
   </main>
 
@@ -88,5 +89,6 @@
       </div>
     </div>
   </footer>
+  <script src="/js/registro.js"></script>
 </body>
 </html>
