--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envia tus Packetes a cualquier destino</title>
     <link rel="stylesheet" href="/css/styleContact.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="shortcut icon" href="/images/ico-paquete.ico">   
 </head>
 <body>
@@ -41,12 +42,12 @@
           </div>
           <div class="form">
               <form action="">
-                  <input type="text" class="form-control" placeholder="Razón Social">
-                  <input type="text" class="form-control" placeholder="Nombre y Apellido">
-                  <input type="text" class="form-control" placeholder="Correo Electronico">
-                  <input type="text" class="form-control" placeholder="Teléfono">
-                  <textarea class="form-control" rows="6" placeholder="Comentario / Consulta"></textarea>
-                  <button type="submit" class="btn-send">ENVIAR</button>
+                  <input type="text" class="form-control" placeholder="Razón Social"  required>
+                  <input type="text" class="form-control" placeholder="Nombre y Apellido" required>
+                  <input type="email" class="form-control" placeholder="Correo Electronico" required>
+                  <input type="number" class="form-control" placeholder="Teléfono"  required>
+                  <textarea class="form-control" rows="6" placeholder="Comentario / Consulta" required></textarea>
+                  <button type="submit" class="btn-send" id="submit">ENVIAR</button>
               </form>
           </div>
       </div>
@@ -80,5 +81,6 @@
             </div>
           </div>
     </footer>
+<script src="/js/contacto.js"></script>
     </body>
 </html>
