--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Envia tus paquetes a donde lo necesites, rapido y seguro."/>
   <meta property="og:image" content="https://enviosyelle.netlify.app/" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
 </head>
   <title>Iniciar sesión</title>
@@ -29,9 +30,9 @@
           <a href="/registro.html">Registrate</a>
         </nav>
       </header>
-  <main class="containerForm">
+  <main class="containerForm" id="containerForm">
     <h1>Iniciar sesión</h1>
-    <form action="#" method="post">
+    <form action="#" method="post" id="formLogin">
       <label for="email">Correo electrónico</label>
       <input type="email" id="email" name="email" required>
 
@@ -40,7 +41,7 @@
 
       <p class="leyenda">¿Aún no tienes una cuenta? <a href="/registro.html">Registrarse</a></p>
 
-      <button type="submit" class="btn">Iniciar sesión</button>
+      <button id="submit" type="submit" class="btn">Iniciar sesión</button>
     </form>
   </main>
 
@@ -79,5 +80,6 @@
       </div>
     </div>
   </footer>
+  <script src="/js/login.js"></script>
 </body>
 </html>
